refactor: standardize placeholder keys and format handling across warehouse menus and messages
- Use consistent `{key}` notation for placeholders throughout the codebase.
- Replace repetitive `replaceAndFormat` calls with updated `formatWithPrefix` integration for cleaner message handling.
- Improve item name determination logic in various cases (e.g., custom names versus material names).
- Simplify and update lore modifications in `WarehouseJobMenu`.